--- a/package.json
+++ b/package.json
@@ -13,10 +13,12 @@
     "axios": "^1.7.8",
     "chart.js": "^4.4.6",
     "cors": "^2.8.5",
+    "dotenv": "^16.4.7",
     "express": "^4.21.2",
     "highcharts": "^10.3.3",
     "highcharts-react-official": "^3.2.0",
     "lightweight-charts": "^4.2.1",
+    "lucide-react": "^0.468.0",
     "react": "^18.2.0",
     "react-chartjs-2": "^5.2.0",
     "react-dom": "^18.2.0",
@@ -27,7 +29,7 @@
     "web-vitals": "^2.1.4"
   },
   "scripts": {
-    "start": "PORT=3000 react-scripts start",
+    "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
@@ -52,6 +54,9 @@
   },
   "proxy": "https://finnhub.io",
   "devDependencies": {
-    "html-webpack-plugin": "^5.6.3"
+    "autoprefixer": "^10.4.20",
+    "html-webpack-plugin": "^5.6.3",
+    "postcss": "^8.4.49",
+    "tailwindcss": "^3.4.16"
   }
 }
